acceptance-tests/src/test/resources/tests/errors/module_and_class_collision/empty_class/_.swift
let kotlin = Kotlin_()

exit(0)
